Fixed center alignment issue with name on small screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,9 +21,7 @@ body {
   height: 200px !important;
 }
 
-.nav-background p {
-  position: relative;
-  left: calc(50% - 4em);
+.nav-background span {
   margin: unset;
   font-size: 26px !important;
   line-height: 40px !important;
